@@ -1,4 +1,5 @@
 [B]Version 1.1.148[/B]
 - hentaidude - fix listing
 - speedporn - fix listing
+- hentaihavenco - fix listing, playback
 
